--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: '*'
+    branches: [ master ]
   pull_request:
-    branches: '*'
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,20 +12,15 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+        uses: actions/checkout@v2
 
       - name: Build
         run: |
           chmod +x ./gradlew
-          ./gradlew build
+          ./gradlew build --info
 
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
