--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="${usesCleartextTraffic}">
 
-        <activity android:name=".activity.AppActivity"
-            android:exported="true">
+        <activity android:name=".activity.AppActivity">
             <nav-graph android:value="@navigation/nav_main"/>
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
