--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches: '*'
+    branches: 'master'
   pull_request:
-    branches: '*'
+    branches: 'master'
 
 jobs:
   build:
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 1_8
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 1_8
+          java-version: 17
 
       - name: Decode google-services.json
         env:
