--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-
 name: CI
 
 on:
   push:
-    branches: 'master'
+    branches: [ master ]
   pull_request:
-    branches: 'master'
+    branches: [ master ]
 
 jobs:
   build:
@@ -13,24 +12,15 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Decode google-services.json
-        env:
-          FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }}
-        run: echo $FIREBASE_SECRET > ./app/google-services.json
+        uses: actions/checkout@v2
 
       - name: Build
         run: |
           chmod +x ./gradlew
-          ./gradlew build
+          ./gradlew build --info
+
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
