--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 31
     buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         android.defaultConfig.vectorDrawables.useSupportLibrary = true
@@ -19,8 +19,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
@@ -51,8 +51,8 @@ dependencies {
     def constraintLayout_version = "2.0.4"
     def recyclerview_version = "1.2.0"
     def junit_version = "4.13.2"
-    def ext_junit_version = "1.1.5"
-    def espresso_core_version = "3.5.1"
+    def ext_junit_version = "1.1.2"
+    def espresso_core_version = "3.3.0"
     def activity_version = "1.2.3"
     def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
@@ -62,7 +62,7 @@ dependencies {
     def room_version = "2.2.6"
     def firebase_version = "28.1.0"
     def play_services_base_version = "17.6.0"
-    def okhttp_version = "4.9.3"
+    def okhttp_version = "4.9.1"
     def swipe_to_refresh_version = "1.1.0"
 
 
